# todo_ai

./: README.md
core/: .dockerignore  Dockerfile  pyproject.toml
core/core/todos/: create_todo.py
core/docs/source/: conf.py  index.rst
core/tests/test_todos/: test_create_todo.py
docs/: pull_request_template.md
project_template/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
project_template/docs/source/: conf.py  index.rst
